@@ -13,6 +13,8 @@
   by ~magit-wip-mode~) and using the new ~magit-before-change-functions~
   and ~magit-after-apply-functions~ hooks.  98ef107037..fa629ad5b5
 
+- Added experimental support for calling Lisp hooks from Git hooks.
+
 - Replaced option ~magit-section-visibility-indicator~ (singluar) with
   new option ~magit-section-visibility-indicators~ (plurarl) to better
   support emacs sessions that have both terminal and gui frames.
